--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "hardhat-gas-reporter": "^2.3.0",
     "postcss": "^8",
     "solidity-coverage": "^0.8.16",
+    "supabase": "^2.70.5",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "typechain": "^8.3.2",
